# ifp

./: AUTHORS  ChangeLog  GAMEBOX  INSTALLING  INTERNALS  Makefile  Makefile.inc.in  README  RUNNING  USING  Xglk.defs  autogen.sh  configure  configure.in  ifp-1.4.lsm  ifp-1.4.spec
src/: Makefile
src/gamebox/: ChangeLog  Makefile  TODO  aboutpage.c  catalog.ifiction  catalog.ifmes  catalog.ini  catalog.py  display.c  gamebox.c  gamebox.hdr  gamegroup.c  gamepage.c  gameset.c  hash.c  inifile.c  iniparser.c  interpreters.c  memory.c  message.c  protos.h  terppage.c  urlhandler.c  utfhandler.c  vector.c  xmlparser.c
src/ifp/: Make.ifp  Make.ifppi  Makefile  TODO  file_intercept.c  finalizer.c  force_link.c  gi_dispa.h  glk_loader.c  glk_proxy.c  ifp.h  ifp_blorb.c  ifp_cache.c  ifp_chain.c  ifp_config.c  ifp_e.c  ifp_finalizer.c  ifp_ftp.c  ifp_glkstream.c  ifp_header.c  ifp_http.c  ifp_internal.h  ifp_loader.c  ifp_main.c  ifp_manager.c  ifp_plugin.c  ifp_pref.c  ifp_recognizer.c  ifp_tracer.c  ifp_url.c  ifp_utils.c  ifpe.1  ifphdr  ifphdr.1  ifplib.3.m4  ifppilib.3.m4  ifprc  include.awk  legion.1  legion.c  (+7 more)
