dnl vi: set ts=2 shiftwidth=2 expandtab:
dnl
dnl Copyright (C) 2001-2007  Simon Baldwin (simon_baldwin@yahoo.com)
dnl 
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU General Public License
dnl as published by the Free Software Foundation; either version 2
dnl of the License, or (at your option) any later version.
dnl 
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307
dnl USA
dnl
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT([Ifp], 1.4, [simon_baldwin@yahoo.com])

dnl Checks for programs.
LDFLAGS="$LDFLAGS -L/usr/X11R6/lib"
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_AWK
AC_PROG_RANLIB

dnl Check specifically for gzip, and substitute the harmless ":" if absent.
AC_PATH_PROG(GZIP, gzip, ,)
if test -z "$GZIP" ; then
  GZIP=":"
fi
AC_SUBST(GZIP)

dnl Checks for libraries.
LIBS=""
AC_CHECK_LIB(dl, dlopen)
DLLIBS="$LIBS"

LIBS=""
AC_CHECK_LIB(ncurses, initscr)
CLIBS="$DLLIBS $LIBS"
AC_SUBST(CLIBS)

LIBS=""
AC_CHECK_LIB(X11, XFlush)
AC_CHECK_LIB(jpeg, jpeg_read_header)
AC_CHECK_LIB(png, png_flush)
XLIBS="$DLLIBS $LIBS"
AC_SUBST(XLIBS)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h limits.h netdb.h netinet/in.h stdlib.h])
AC_CHECK_HEADERS([string.h strings.h sys/socket.h sys/time.h unistd.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_MODE_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_C_VOLATILE

dnl Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([atexit dup2 getcwd gethostbyname gettimeofday memmove])
AC_CHECK_FUNCS([memset regcomp socket strcasecmp strchr strcspn strdup])
AC_CHECK_FUNCS([strerror strncasecmp strrchr strspn strstr strtoul])

dnl Find the linker, the archiver, and rm.
AC_PATH_PROG(LD, ld,,)
AC_SUBST(LD)
AC_PATH_PROG(AR, ar,,)
AC_SUBST(AR)
AC_PATH_PROG(RM, rm,,)
AC_SUBST(RM)

dnl Write out configuration information to output files.
AC_CONFIG_FILES([Makefile.inc])
AC_OUTPUT
